--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       top: 200px;
       right: -1100px;
             width: 400px;
-            height: 300px;
+            height: 325px;
             padding: 20px;
             box-sizing: border-box;
         }
@@ -177,8 +177,8 @@
 
 
         var data = [
-            { label: 'pollution', value: feature.properties.population },
-            { label: 'population', value: feature.properties.pollution },
+            { label: 'population', value: feature.properties.population },
+            { label: 'pollution', value: feature.properties.pollution },
         ];
         // Set up the chart dimensions
         var margin = { top: 20, right: 20, bottom: 50, left: 50 };
